Adding layers module Adding HTML5 <menu> for %dropdown implementation Implicit lightness/darkness for $theme-colors Adding alpha-based 'lighten' and 'darken' to $theme-colors

--- a/scss/modules/nav/_classes.scss
+++ b/scss/modules/nav/_classes.scss
@@ -28,7 +28,7 @@ nav, .nav {
 	@include dropdown-style();
 	@extend %dropdown-container;
 
-	> .dropdown {
+	> menu, > .dropdown {
 		@extend %dropdown;
 
 		li {
