--- a/scss/modules/type/_themes.scss
+++ b/scss/modules/type/_themes.scss
@@ -15,8 +15,7 @@
 
 %theme-type-default {
 	&, &%light {
-		// color: $type-base-color;
-		color: green;
+		color: $type-base-color;
 
 		p, ul, ol, dl { color: $type-base-color; }
 	}
