--- a/scss/modules/layers/_classes.scss
+++ b/scss/modules/layers/_classes.scss
@@ -3,3 +3,10 @@
 // ==============
 
 // Layer Classes
+.layer { @extend %layer; }
+
+.overlay { @extend %overlay; }
+
+.page { @extend %page; }
+
+.container { @extend %container; }
