--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -12,11 +12,11 @@
 /* Import Modules */
 @import
     'modules/global/_module',
+    'modules/layers/_module',
     'modules/_reset',
     'modules/_layout',
     'modules/media/_module',
     'modules/grid/_module',
-    'modules/_layers',
     'modules/type/_module',
     'modules/nav/_module',
     'modules/forms/_module',
