--- a/scss/modules/global/_mixins.scss
+++ b/scss/modules/global/_mixins.scss
@@ -9,3 +9,96 @@
 ) {
     $themes: append($themes, ($module, $theme));
 }
+
+@mixin translate(
+    $horizontal: false,
+    $vertical: false
+) {
+    @if $vertical and $horizontal {
+        @include experimental(transform, translateX($horizontal) translateY($vertical));
+    } @else {    
+        @if $vertical {
+            @include experimental(transform, translateY($vertical));
+        }
+
+        @if $horizontal {
+            @include experimental(transform, translateX($horizontal));
+        }
+    }
+}
+
+@mixin position-absolute(
+    $vertical: false,
+    $horizontal: false,
+    $top: false,
+    $bottom: false,
+    $left: false,
+    $right: false
+) {
+    position: absolute;
+
+    @if $vertical {    
+        @if $vertical == top {
+            top: 0;
+            bottom: inherit;
+        }
+        @else if $vertical == bottom {
+            bottom: 0;
+            top: inherit;
+        }
+        @else if $vertical == below {
+            top: 100%;
+            bottom: inherit;
+        }
+        @else if $vertical == above {
+            bottom: 100%;
+            top: inherit;
+        }
+        @else if $vertical == center {
+            top: 50%;
+            @include experimental(transform, translateY(-50%));
+            bottom: inherit;
+        }
+        @else {
+            top: $vertical;
+            bottom: inherit;
+        }
+    }
+
+    @if $horizontal {
+        @if $horizontal == left { 
+            left: 0;
+            right: inherit;
+        }
+        @else if $horizontal == right {
+            right: 0;
+            left: inherit;
+        }
+        @else if $horizontal == center {
+            left: 50%;
+            @include experimental(transform, translateX(-50%));
+        }
+        @else { left: $horizontal; }
+    }
+
+    @if $top {
+        top: $top;
+        bottom: inherit;
+    }
+
+    @if $bottom {
+        bottom: $bottom;
+        top: inherit;
+    }
+
+    @if $left {
+        left: $left;
+        right: inherit;
+    }
+
+    @if $right {
+        right: $right;
+        left: inherit;
+    }
+}
+
