--- a/scss/modules/themes/_mixins.scss
+++ b/scss/modules/themes/_mixins.scss
@@ -6,17 +6,18 @@
 
 @mixin themes(
     $themes: $themes,
-    $mode: $theme-mode
+    $mode: false
 ) {
 
     @each $theme in $themes {
         $_module: nth($theme, 1);
         $_theme: 'default';
+        $_mode: if($mode, '%#{$mode}', '');
 
         @if length($theme) > 1 {
             $_theme: nth($theme, 2);
         }
 
-        @extend %theme-#{$_module}-#{$_theme}%#{$mode};
+        @extend %theme-#{$_module}-#{$_theme}#{$_mode};
     }
 }
