--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -54,7 +54,7 @@ $type-base-font-weight: 300 !default;
 $type-base-color: $color-dark !default;
 $type-base-color-light: $color-light !default;
 
-$type-custom-import: "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" !default;
+$type-custom-import: "http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" !default;
 $type-custom-font-family: "Open Sans" !default;
 $type-use-custom: true !default;
 
