Many small changes, documentation prototypes set

--- a/docs/views/grid.html
+++ b/docs/views/grid.html
@@ -8,7 +8,7 @@
     <label class="button" for="columns.default"><em>default</em></label>
 </div>
 <div class="row-1 field {{component.grid.columns.class1}}" ng-repeat="col_width in [12,6,4,3,2,1]">
-    <div ng-repeat="col in component.util.range(12/col_width)" class="theme-secondary col-{{col_width}}">col-{{col_width}}</div>
+    <div ng-repeat="col in component.util.range(12/col_width)" class="theme-darken border-primary col-{{col_width}}">col-{{col_width}}</div>
 </div>
 
 <h2>Column Offset</h2>
