--- a/scss/modules/themes/_classes.scss
+++ b/scss/modules/themes/_classes.scss
@@ -13,6 +13,10 @@
     .color-#{$name} {
         @extend %color-#{$name};
     }
+
+    .border-#{$name} {
+        @extend %border-#{$name};
+    }
 }
 
 body {
