--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -348,9 +348,9 @@ $alert-type-scale: -1 !default;
 // $animation-timing-function: ease-in-out !default;
 
 // Activation Settings
-$page-selector: ".page" !default;
-$active-selector: ".active" !default;
-$inactive-selector: ".inactive" !default;
-$active-z-index: 2 !default;
-$inactive-z-index: 0 !default;
+// $page-selector: ".page" !default;
+// $active-selector: ".active" !default;
+// $inactive-selector: ".inactive" !default;
+// $active-z-index: 2 !default;
+// $inactive-z-index: 0 !default;
 
