--- a/scss/modules/themes/_components.scss
+++ b/scss/modules/themes/_components.scss
@@ -2,14 +2,35 @@
 // Themes Components
 // =================
 
+%light {
+    @include themes($mode: 'light');
+}
+
+%dark {
+    @include themes($mode: 'dark');
+}
+
+%color-light {
+    color: if(is-dark($type-base-color), $type-base-color, $color-dark);
+}
+
+%color-dark {
+    color: if(is-dark($type-base-color) == false, $type-base-color, $color-light);
+}
+
 @each $theme-color in $theme-colors {
     $name: nth($theme-color, 1);
     $color: nth($theme-color, 2);
     $mode: if(is-dark($color), 'dark', 'light');
 
-    %theme-#{$name} {
+    %theme-#{$name} {        
+        @if is-dark($color) {
+            @extend %dark;
+        } @else {
+            @extend %light;
+        }
+
         background-color: $color;
-        @include themes($mode: $mode);
     }
 
     %color-#{$name} {
